--- a/ChatSphere/index.html
+++ b/ChatSphere/index.html
@@ -3,13 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RADIUS-PROGRAMA Animation</title>
+    <title>ChatSphere</title>
     <link rel="stylesheet" href="Style/Intro-Animation.css">
     <!--<script src="Client-Side-Scripts/Intro-Animation.js"></script>-->
+    <script src="Client-Side-Scripts/checkLanguageCookies.js"></script>
 </head>
 <body>
+   
     <div class="animation-container">
-        <h1 class="animated-text">ChatSphere</h1>
+        <img class="animated-text" src="Media/logo-definitive-removebg-preview.png"></img>
         
         <!-- Form Section -->
         <form action="RegisterUser.html" method="POST">
