--- a/ChatSphere/chat-client.html
+++ b/ChatSphere/chat-client.html
@@ -1,28 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Chat Room</title>
     <link rel="stylesheet" href="Style/chat.css">
-    <script src="Client-Side-Scripts/chat.js" defer></script>
+    <script src="Client-Side-Scripts/Handle-Chats.js"></script>
+    <script src="Client-Side-Scripts/chat.js"></script>
+    <script src="Client-Side-Scripts/chat-client.js" defer></script>
 </head>
-
 <body>
     <div class="chat-container">
         <div class="chat-header">
             <h2>Chat Room</h2>
-            <h3>Welcome, <span id="username">Guest</span>!</h3> <!-- Display user's name -->
         </div>
         <div class="chat-area" id="chat-area">
             <!-- Messages will be displayed here -->
         </div>
         <div class="chat-input">
             <input type="text" id="messageInput" placeholder="Type a message..." />
-            <button id="sendMessageBtn">Send</button> <!-- Button without inline onClick -->
+            <button id="sendMessageBtn">Send</button>
         </div>
     </div>
 </body>
-
 </html>
