--- a/ChatSphere/RecoverPassword.html
+++ b/ChatSphere/RecoverPassword.html
@@ -9,18 +9,18 @@
 </head>
 <body>
     <div class="form-container">
-        <h2>Recuperar Contraseña</h2>
+        <h2>Recover Password</h2>
         <form id="recoverForm">
-            <label for="email">Correo Electrónico</label><br>
-            <input type="email" id="email" name="email" placeholder="Introduce tu correo electrónico" required><br><br>
+            <label for="email">Email</label><br>
+            <input type="email" id="email" name="email" placeholder="Introduce your Email" required><br><br>
 
-            <label for="token">Introduce tu token</label><br>
-            <input type="text" id="token" name="token" placeholder="Introduce tu token" required><br><br>
+            <label for="token">Introduce your key</label><br>
+            <input type="text" id="token" name="token" placeholder="Introduce your recovery key" required><br><br>
 
-            <label for="password">Nueva Contraseña</label><br>
-            <input type="password" id="password" name="password" placeholder="Nueva contraseña" required><br><br>
+            <label for="password">New Password</label><br>
+            <input type="password" id="password" name="password" placeholder="New Password" required><br><br>
 
-            <input type="submit" value="Enviar">
+            <input type="submit" value="Send">
         </form>
     </div>
 
