--- a/ChatSphere/RegisterUser.html
+++ b/ChatSphere/RegisterUser.html
@@ -18,7 +18,7 @@
 <body>
     <h1>Register</h1>
     <div class="animation-container">
-        <img class="animated-text" src="Media/logo-definitive-removebg-preview.png"></img>
+        <a href="index.html"><img class="animated-text" href="index.html" src="Media/logo-definitive-removebg-preview.png"></img></a>
     </div>
     <div class="form">
         <form id="registerForm" method="POST" action="Server-Side-Scripts/handleRegistration.php"
