--- a/ChatSphere/login.html
+++ b/ChatSphere/login.html
@@ -19,7 +19,7 @@
 <body>
     <h1>Login</h1>
     <div class="animation-container">
-        <img class="animated-text" src="Media/logo-definitive-removebg-preview.png"></img>
+        <a href="index.html"><img class="animated-text"  src="Media/logo-definitive-removebg-preview.png"></img></a>
     </div>
     <div class="form">
         <form id="loginForm">
